--- a/index.html
+++ b/index.html
@@ -86,16 +86,20 @@
         <p>Message</p>
         <input/>
 
+        <p>SEND</p>
+
+
   </main>
 
 <!-- place all icons in footer -->
 
   <footer><ul>
-    <li>YouTubeIcon</li>
-    <li>FacebookIcon</li>
-    <li>Home_potlogo</li>
-    <li>TwitterLogo</li>
-    <li>InstagramLogo</li>
+    <img src="./images/icons8-youtube-96.png" alt="youtube icon">
+    <img src="./images/icons8-facebook-96 (1).png" alt="facebook icon">
+    <img src="./images/icons8-pottery-96 (1).png" alt="Icon of a little pot">
+    <img src="./images/icons8-twitter-96.png" alt="twitter icon">
+    <img src="./images/icons8-instagram-96.png" alt="instagram icon">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo velit rerum modi ipsam harum copyright 2015 - 2020</p>
 </ul>
 
 
