added some anchoring to the page

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
    
   <header>
     <ul>
-      <li>HOME</li>
-      <li>ABOUT</li>
-      <li>PRODUCTS</li>
-      <li>CONTACT</li>
+      <li><a href="/home">HOME</a></li>
+      <li><a href="/about">ABOUT</a></li>
+      <li><a href="/products">PRODUCTS</a></li>
+      <li><a href="/contact">CONTACT</a></li>
       <p>CARA</p><img src="./images/icons8-pottery-96 (1).png" alt="Icon of a little pot"><p>CARA</p>
       <input/>
       <img src="./images/1200px-Google_Magnifying_Glass.svg.png" alt="magnifying glass">
